logs/super-devops.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/super_devops'...
Listing './lib/python3.5/site-packages/super_devops/ansible'...
Listing './lib/python3.5/site-packages/super_devops/database'...
Listing './lib/python3.5/site-packages/super_devops/docker'...
Listing './lib/python3.5/site-packages/super_devops/email'...
Listing './lib/python3.5/site-packages/super_devops/http'...
Listing './lib/python3.5/site-packages/super_devops/jenkins'...
Listing './lib/python3.5/site-packages/super_devops/misc'...
Listing './lib/python3.5/site-packages/super_devops/nagios'...
Listing './lib/python3.5/site-packages/super_devops/office'...
Listing './lib/python3.5/site-packages/super_devops/rabbitmq'...
Listing './lib/python3.5/site-packages/super_devops/robotframework'...
Compiling './lib/python3.5/site-packages/super_devops/robotframework/rf_wrapper.py'...
***   File "./lib/python3.5/site-packages/super_devops/robotframework/rf_wrapper.py", line 197
    print format_wf .format(*header)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/super_devops/selenium'...
Listing './lib/python3.5/site-packages/super_devops/ssh'...
Listing './lib/python3.5/site-packages/super_devops/yaml'...
Listing './lib/python3.5/site-packages/super_devops-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_enum.py'...
***   File "./lib/python3.5/site-packages/tests/test_enum.py", line 35
    print Persona.CONSUMER
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_http.py'...
***   File "./lib/python3.5/site-packages/tests/test_http.py", line 24
    print res.status_code
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_ssh.py'...
***   File "./lib/python3.5/site-packages/tests/test_ssh.py", line 13
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_yaml.py'...
***   File "./lib/python3.5/site-packages/tests/test_yaml.py", line 8
    print type(data)
             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
